--- a/sass/grid.css
+++ b/sass/grid.css
@@ -57,6 +57,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  width: 100%;
 }
 
 .swiper {
@@ -99,7 +100,7 @@ a {
 article,
 section,
 footer {
-  padding: 22px 0 56px 0;
+  padding: 0 0 56px 0;
 }
 
 .col {
@@ -180,16 +181,66 @@ footer {
   margin-top: 4px;
 }
 .header .navbar-search {
+  position: relative;
   display: inline-block;
   justify-self: end;
   padding-bottom: 10px;
 }
-.header .navbar-search img {
-  height: 20px;
-  width: 20px;
+.header .navbar-search input {
+  outline: none;
+  width: 0;
+  opacity: 0;
+  background-color: #F21D44;
+  text-align: center;
+  position: absolute;
+  border: unset;
+  color: white;
+  font-size: 1.125rem;
+  border-radius: 30px 0 0 30px;
+  transition: all 0.7s;
 }
-.header .navbar-search img:hover {
+.header .navbar-search input::-moz-placeholder {
+  color: #fff;
+  font-size: 1.125rem;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+}
+.header .navbar-search input:-ms-input-placeholder {
+  color: #fff;
+  font-size: 1.125rem;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+}
+.header .navbar-search input::placeholder {
+  color: #fff;
+  font-size: 1.125rem;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+}
+.header .navbar-search .fa {
+  font-size: 20px;
+  color: black;
+  z-index: 20;
+  padding: 16px 15px;
+  background-color: #F21D44;
+  color: #fff;
+  border-radius: 50%;
   cursor: pointer;
+}
+.header .navbar-search:hover input {
+  width: 200px;
+  opacity: 1;
+  transition: all 0.7s;
+  padding: 16px 30px;
+  transform: translateX(-110%);
+}
+.header .navbar-search:hover .fa {
+  border-radius: 0 30px 30px 0;
+  transition: all 0.5s;
+  transform: translateX(-50%);
 }
 .header .nav-list {
   justify-self: center;
@@ -215,17 +266,37 @@ footer {
   transition: all 0.3s ease-in;
 }
 
+.hero {
+  padding: 40px 0 61px 0;
+}
 .hero-content {
   gap: 13px;
 }
 .hero-content .feature {
+  grid-row: 1/3;
   grid-column: span 7;
 }
+.hero-content .feature img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.hero-content .col-2 {
+  grid-column: 8/13;
+  grid-row: 1/2;
+}
+.hero-content .col-3 {
+  grid-column: 8/13;
+  grid-row: 2/3;
+}
 .hero-content .col-3 img {
-  margin-top: 15px;
-  overflow: hidden;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .hero-content .hero-card {
+  height: 100%;
   border-radius: 4px;
   position: relative;
 }
@@ -272,22 +343,22 @@ footer {
 }
 
 .wrapper {
+  padding-top: 0;
   text-align: start;
   justify-items: start;
+  gap: 50px;
   align-items: flex-start;
 }
 .wrapper img {
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .wrapper .hot-topic {
-  overflow-y: hidden;
   position: relative;
   display: grid;
-  grid-column: 1/8;
+  grid-column: 1/9;
   align-items: flex-start;
   grid-template-columns: repeat(12, 1fr);
-  gap: 17px;
 }
 .wrapper .hot-topic .hot-topic-swiper {
   display: none;
@@ -296,6 +367,7 @@ footer {
   transform: translateY(-100%);
 }
 .wrapper .hot-topic .swiper {
+  margin-top: 25px;
   width: 100%;
   height: 100%;
   grid-column: 1/13;
@@ -304,16 +376,14 @@ footer {
   grid-column: span 12;
 }
 .wrapper .hot-topic .swiper-slide {
-  height: 520px;
-  overflow: scroll;
   justify-content: flex-start;
   gap: 20px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  overflow-x: hidden;
 }
 .wrapper .hot-topic .swiper-slide .hot-topic-feature {
   grid-column: span 7;
+  height: 520px;
   position: relative;
 }
 .wrapper .hot-topic .swiper-slide .hot-topic-feature img {
@@ -358,6 +428,24 @@ footer {
   color: white;
   line-height: 24px;
 }
+.wrapper .hot-topic .swiper-slide .fashion {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  place-items: center;
+}
+.wrapper .hot-topic .swiper-slide .fashion .fashion-title {
+  display: none;
+}
+.wrapper .hot-topic .swiper-slide .fashion .feature {
+  grid-column: span 8;
+}
+.wrapper .hot-topic .swiper-slide .fashion .right {
+  grid-column: span 4;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 60px;
+}
 .wrapper .hot-topic-title {
   grid-column: 1/span 12;
   display: flex;
@@ -373,17 +461,20 @@ footer {
   letter-spacing: -2%;
 }
 .wrapper .hot-topic-title .line {
-  display: inline-block;
   height: 2px;
   background-color: #e4e4e4;
-  min-width: 40%;
+  width: 37%;
 }
 .wrapper .hot-topic-title p {
   display: flex;
   gap: 16px;
   align-items: center;
 }
-.wrapper .hot-topic-title p .fa {
+.wrapper .hot-topic-title p span {
+  display: flex;
+  gap: 8px;
+}
+.wrapper .hot-topic-title p span .fa {
   border: 1px solid rgba(24, 0, 31, 0.54);
   font-size: 1rem;
   padding: 6px 10px;
@@ -406,10 +497,12 @@ footer {
 }
 .wrapper .hot-topic-title p .nav-link.active {
   color: #F21D44;
-  transform: translate3d(0, -0.2em, 0);
 }
 .wrapper .hot-topic .news {
   grid-column: 8/13;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 .wrapper .hot-topic .news img {
   height: 100%;
@@ -425,9 +518,7 @@ footer {
 .wrapper .hot-topic .news-links img {
   border-radius: 4px;
   height: 100%;
-}
-.wrapper .hot-topic .news-links:not(:nth-child(1)) {
-  margin-top: 15px;
+  aspect-ratio: 1/1;
 }
 .wrapper .hot-topic .news-links a {
   display: block;
@@ -443,7 +534,6 @@ footer {
   transition: all 0.3s ease-in;
 }
 .wrapper .hot-topic .fashion {
-  width: 100%;
   grid-column: span 12;
 }
 
@@ -456,8 +546,10 @@ footer {
 }
 
 .fashion {
-  grid-column: 8/span 5;
-  margin: 0 auto;
+  grid-column: 9/13;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 .fashion-title {
   display: flex;
@@ -477,7 +569,7 @@ footer {
   width: 80%;
 }
 .fashion .feature {
-  margin-top: 24px;
+  margin-top: 25px;
   position: relative;
 }
 .fashion .feature img {
@@ -523,7 +615,6 @@ footer {
   margin-right: 6px;
 }
 .fashion .wrap {
-  margin-top: 19px;
   display: flex;
   gap: 12px;
   align-items: center;
@@ -553,8 +644,13 @@ footer {
   cursor: pointer;
 }
 
+.g-sec {
+  padding-top: 0;
+}
+
 .gallery .swiper {
   grid-column: span 12;
+  display: flex;
 }
 .gallery-title {
   display: flex;
@@ -586,13 +682,13 @@ footer {
   text-align: start;
   margin-top: 17px;
   position: relative;
-}
-.gallery-card:hover img {
-  transform: scale(1.1);
-  transition: all 0.25s ease-in;
+  height: 270px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .gallery-card img {
   width: 100%;
+  height: 100%;
   border-radius: 4px;
 }
 .gallery-card-content {
@@ -634,6 +730,10 @@ footer {
   margin-right: 6px;
 }
 
+.blog-container {
+  gap: 30px;
+}
+
 .blog-catagories {
   display: flex;
   gap: 12px;
@@ -665,7 +765,6 @@ footer {
 }
 .news-links:not(:nth-child(1)) img {
   border-radius: 4px;
-  margin-right: 10px;
 }
 .news-links .info {
   color: rgba(24, 0, 31, 0.54);
@@ -742,10 +841,13 @@ footer {
 
 .overview {
   align-items: flex-start;
+  gap: 60px;
 }
 .overview .ov-links {
-  grid-column: 1/8;
-  overflow-y: hidden;
+  grid-column: 1/9;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
 }
 .overview-catagory {
   gap: 12px;
@@ -771,9 +873,6 @@ footer {
   justify-self: end;
   gap: 16px;
   text-align: start;
-}
-.overview .ov-card:not(:nth-child(1)) {
-  margin-top: 18px;
 }
 .overview .ov-card a {
   font-size: 1.5rem;
@@ -816,7 +915,8 @@ footer {
   letter-spacing: 0.02rem;
   line-height: 1.5rem;
   background-color: white;
-  margin-top: 126px;
+  margin: 120px 0 28px 0;
+  align-self: flex-start;
 }
 .overview .btn::after {
   content: "";
@@ -923,6 +1023,7 @@ footer {
 }
 .overview .tech .card {
   position: relative;
+  margin-top: 22px;
 }
 .overview .tech .card .text {
   width: 100%;
@@ -930,6 +1031,9 @@ footer {
   position: absolute;
   bottom: 0px;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+}
+.overview .tech .ov-card {
+  margin-top: 20px;
 }
 .overview .tech .ov-card a {
   color: #010D00;
@@ -944,7 +1048,11 @@ footer {
   padding-top: 9px;
 }
 .overview .tech .tech-title h4 {
-  margin: 30px 10px 20px 0;
+  margin: 53px 0 47px 0;
+  font-size: 1.5rem;
+  font-family: "roboto slab";
+  font-weight: 600;
+  color: rgb(14, 19, 43);
 }
 .overview .tech .tech-title h4 .line {
   height: 1px;
@@ -963,10 +1071,13 @@ footer {
 .overview .tech .popular-catagory {
   display: flex;
   flex-direction: column;
+}
+.overview .tech .popular-catagory .list {
+  display: flex;
+  flex-direction: column;
   gap: 24px;
 }
 .overview .tech .popular-catagory .table {
-  padding-right: 10%;
   display: flex;
   justify-content: space-between;
   font-size: 1rem;
@@ -975,18 +1086,20 @@ footer {
   color: rgb(14, 19, 43);
 }
 .overview .tech .popular-catagory .line {
-  width: 40%;
+  width: 29%;
 }
 .overview .recent .tech-title {
   margin-bottom: 0;
+}
+.overview .recent-post {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
 }
 .overview .recent-post-card {
   display: flex;
   align-items: center;
   gap: 12px;
-}
-.overview .recent-post-card:not(:nth-child(1)) {
-  margin-top: 35px;
 }
 .overview .recent-post-card .text h4 a {
   color: #010D00;
@@ -1053,6 +1166,7 @@ footer {
   position: absolute;
   top: 5%;
   right: 5%;
+  z-index: 120;
   cursor: pointer;
 }
 .popup-image img {
@@ -1190,8 +1304,8 @@ footer {
 @media screen and (max-width: 1068px) {
   .header .navbar-menu {
     position: fixed;
-    top: 10%;
-    right: 20%;
+    top: 61px;
+    right: 90px;
     z-index: 100;
     display: block;
     transition: all 1s ease-in-out;
@@ -1200,9 +1314,15 @@ footer {
     background-color: white;
     position: fixed;
     left: 0;
+    padding-left: 90px;
     top: 0;
+    text-align: start;
     z-index: 100;
     width: 100%;
+    padding-bottom: 10px;
+  }
+  .header .logo h1 {
+    text-align: start;
   }
   html {
     font-size: 15px;
@@ -1230,16 +1350,16 @@ footer {
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 10vh;
-    left: 50%;
-    right: 50%;
+    top: 24px;
+    left: 69px;
   }
   .header .navbar-social .fa {
     color: #fff;
     font-size: 20px;
   }
   .active.navbar-menu {
-    left: 10%;
+    top: 47px;
+    left: 30px;
     transition: transform 0.3s ease-in;
   }
   .active.navbar-menu span {
@@ -1265,7 +1385,9 @@ footer {
     visibility: visible;
   }
   .header .navbar-search {
-    display: none;
+    position: fixed;
+    top: 20px;
+    right: 69px;
   }
   .navbar .nav-list {
     position: absolute;
@@ -1273,8 +1395,8 @@ footer {
     top: 30%;
     transform: translate(-50% -50%);
     font-size: 1.5rem;
-    text-align: start;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
     padding: 0;
   }
@@ -1285,6 +1407,9 @@ footer {
     color: white;
     border-bottom: 1px solid white;
   }
+  .overview .ov-card:not(:nth-child(1)) {
+    margin-top: 47px;
+  }
   .swiper {
     grid-column: span 12;
   }
@@ -1294,8 +1419,21 @@ footer {
   .swiper .swiper-slide .fashion {
     width: 100%;
   }
-  .hero-content {
-    display: block;
+  .hero {
+    padding: 30px 0;
+  }
+  .hero .hero-content {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    padding-top: 74px;
+  }
+  .hero .hero-content img {
+    aspect-ratio: 1/1;
+    -o-object-position: center;
+       object-position: center;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .wrapper .hot-topic {
     grid-column: 1/13;
@@ -1308,6 +1446,7 @@ footer {
   }
   .wrapper .hot-topic .swiper-slide .hot-topic-feature {
     grid-column: span 6;
+    height: 100%;
   }
   .wrapper .hot-topic .swiper-slide .news {
     grid-column: span 6;
@@ -1336,15 +1475,44 @@ footer {
 .overview .tech {
     grid-column: span 12;
   }
+  .overview .btn {
+    display: table;
+    margin: 30px 0;
+    text-align: start;
+  }
+  .overview .tech .card img {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 768px) {
   html {
     font-size: 13px;
   }
+  section {
+    padding: 15px 0;
+  }
+  .grid {
+    gap: 0;
+  }
+  .header .logo {
+    text-align: start;
+    padding-left: 90px;
+  }
+  .header .logo h1 {
+    text-align: start;
+  }
   .hero {
     display: block;
   }
   .hero img {
+    width: 100%;
+  }
+  .wrapper .hot-topic .news-links {
+    flex-direction: column;
+    width: 100%;
+    align-items: flex-start;
+  }
+  .wrapper .hot-topic .news-links img {
     width: 100%;
   }
   .wrapper .hot-topic .swiper {
@@ -1353,6 +1521,13 @@ footer {
   .wrapper .hot-topic .swiper-slide {
     grid-column: span 12;
   }
+  .wrapper .hot-topic .swiper-slide .fashion .feature {
+    grid-column: span 12;
+  }
+  .wrapper .hot-topic .swiper-slide .fashion .right {
+    grid-column: span 12;
+    gap: 20px;
+  }
   .wrapper .hot-topic .swiper-slide .hot-topic-feature {
     grid-column: span 12;
   }
@@ -1360,12 +1535,14 @@ footer {
     grid-column: span 12;
   }
   .wrapper .hot-topic .swiper-slide .news img {
-    width: 200px;
+    width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+    aspect-ratio: 16/9;
   }
   .wrapper .fashion {
     grid-column: 1/span 12;
+    margin-top: 30px;
     width: 100%;
   }
   .wrapper .fashion-title {
@@ -1408,10 +1585,34 @@ footer {
   .wrapper .hot-topic-title {
     grid-column: span 12;
   }
+  .overview .ov-links {
+    gap: 0;
+  }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   html {
     font-size: 12px;
+  }
+  .header .logo {
+    padding-left: 30px;
+  }
+  .header .navbar-menu {
+    right: 30px;
+  }
+  .wrapper .hot-topic-title {
+    grid-column: span 12;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+  }
+  .wrapper .hot-topic-title h3 {
+    grid-column: span 12;
+    text-align: center;
+  }
+  .wrapper .hot-topic-title p {
+    display: flex;
+    justify-content: space-between;
+    grid-column: 1/span 12;
+    gap: 0;
   }
   .footer-nav {
     margin-top: 30px;
@@ -1430,6 +1631,23 @@ footer {
     justify-content: center;
     align-items: center;
   }
+  .blog-lifestyle {
+    margin: 20px 0;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 12px;
+  }
+  .blog-catagories {
+    grid-column: span 12;
+  }
+  .news-links {
+    grid-column: span 6;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .news-links img {
+    width: 100%;
+  }
   .overview .ov-card {
     flex-direction: column;
     margin-top: 40px;
@@ -1444,6 +1662,9 @@ footer {
   }
   .overview .btn {
     margin-top: 20px;
+  }
+  .gallery-title .line {
+    display: none;
   }
   .wrapper .hot-topic-title .line {
     display: none;
