--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -1,10 +1,11 @@
 @import "variable", "media";
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500&family=Poppins:wght@400;500;600&family=Roboto+Slab:wght@500&family=Yeseva+One&display=swap");
-html{
+html {
   scroll-behavior: smooth;
 }
 body {
   font-family: "Poppins", sans-serif;
+  width: 100%;
 }
 
 .swiper {
@@ -47,7 +48,7 @@ a {
 article,
 section,
 footer {
-  padding: 22px 0 56px 0;
+  padding: 0 0 56px 0;
 }
 .col {
   grid-column: span 5;
@@ -142,17 +143,63 @@ footer {
     }
 
     &-search {
+      position: relative;
       display: inline-block;
       justify-self: end;
       padding-bottom: 10px;
-
-      img {
-        height: 20px;
-        width: 20px;
-
-        &:hover {
-          cursor: pointer;
+      input {
+        outline: none;
+        width: 0;
+        opacity: 0;
+        background-color: $red;
+        text-align: center;
+        position: absolute;
+        border: unset;
+        color: $white;
+        font-size: $font-600;
+        border-radius: 30px 0 0 30px;
+        transition: all 0.7s;
+        &::placeholder {
+          color: #fff;
+          font-size: $font-600;
+          text-align: center;
+          letter-spacing: 0.05em;
+          text-transform: uppercase;
         }
+      }
+
+      .fa{
+        font-size: 20px;
+        color: black;
+        z-index: 20;
+        padding: 16px 15px;
+
+        background-color: $red;
+        color: #fff;
+        border-radius: 50%;
+        cursor: pointer;
+       
+      }
+      &:hover input{
+        width: 200px;
+        opacity: 1;
+        transition: all 0.7s;
+        padding: 16px 30px;
+        transform: translateX(-110%);
+
+
+
+      }
+      &:hover .fa{
+        border-radius: 0 30px 30px 0;
+        transition: all 0.5s;
+        transform: translateX(-50%);
+
+
+        
+        
+
+
       }
     }
   }
@@ -189,21 +236,37 @@ footer {
 
 // hero section ///////////////////////////////
 .hero {
+  padding: 40px 0 61px 0;
+
   &-content {
     gap: 13px;
 
     .feature {
+      grid-row: 1/3;
       grid-column: span 7;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
 
+    .col-2 {
+      grid-column: 8/13;
+      grid-row: 1/2;
+    }
     .col-3 {
+      grid-column: 8/13;
+      grid-row: 2/3;
+
       img {
-        margin-top: 15px;
-        overflow: hidden;
+        width: 100%;
+        object-fit: cover;
       }
     }
 
     .hero-card {
+      height: 100%;
       border-radius: 4px;
       position: relative;
 
@@ -261,22 +324,21 @@ footer {
 
 // hot topic start >>>>>>
 .wrapper {
+  padding-top: 0;
   text-align: start;
   justify-items: start;
+  gap: 50px;
   align-items: flex-start;
   img {
-    object-fit: contain;
+    object-fit: cover;
   }
 
   .hot-topic {
-    overflow-y: hidden;
     position: relative;
     display: grid;
-    grid-column: 1/8;
+    grid-column: 1/9;
     align-items: flex-start;
     grid-template-columns: repeat(12, 1fr);
-    gap: 17px;
-
     .hot-topic-swiper {
       display: none;
       opacity: 0.3;
@@ -284,6 +346,7 @@ footer {
       transform: translateY(-100%);
     }
     .swiper {
+      margin-top: 25px;
       width: 100%;
       height: 100%;
       grid-column: 1/13;
@@ -292,17 +355,13 @@ footer {
       }
 
       &-slide {
-        height: 520px;
-        overflow: scroll;
         justify-content: flex-start;
         gap: 20px;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        // margin: 0 auto;
-        overflow-x: hidden;
-
         .hot-topic-feature {
           grid-column: span 7;
+          height: 520px;
           position: relative;
 
           img {
@@ -356,6 +415,24 @@ footer {
             }
           }
         }
+        .fashion {
+          .fashion-title {
+            display: none;
+          }
+          display: grid;
+          grid-template-columns: repeat(12, 1fr);
+          place-items: center;
+          .feature {
+            grid-column: span 8;
+          }
+          .right {
+            grid-column: span 4;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 60px;
+          }
+        }
       }
     }
 
@@ -375,11 +452,9 @@ footer {
       }
 
       .line {
-        display: inline-block;
         height: 2px;
         background-color: #e4e4e4;
-
-        min-width: 40%;
+        width: 37%;
       }
 
       p {
@@ -387,12 +462,16 @@ footer {
         gap: 16px;
         align-items: center;
 
-        .fa {
-          border: 1px solid $light-grey;
-          font-size: 1rem;
-          padding: 6px 10px;
-          color: $black;
-          cursor: pointer;
+        span {
+          display: flex;
+          gap: 8px;
+          .fa {
+            border: 1px solid $light-grey;
+            font-size: 1rem;
+            padding: 6px 10px;
+            color: $black;
+            cursor: pointer;
+          }
         }
 
         .swiper-button-disabled {
@@ -411,13 +490,15 @@ footer {
         }
         .nav-link.active {
           color: $red;
-          transform: translate3d(0, -0.2em, 0);
         }
       }
     }
 
     .news {
       grid-column: 8 / 13;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
       img {
         height: 100%;
         width: 100px;
@@ -431,12 +512,8 @@ footer {
         img {
           border-radius: 4px;
           height: 100%;
+          aspect-ratio: 1/1;
         }
-
-        &:not(:nth-child(1)) {
-          margin-top: 15px;
-        }
-
         a {
           display: block;
           color: rgba(14, 19, 43, 1);
@@ -454,7 +531,6 @@ footer {
       }
     }
     .fashion {
-      width: 100%;
       grid-column: span 12;
     }
   }
@@ -471,9 +547,10 @@ footer {
 // .fashion section start/////////////////////////////////
 
 .fashion {
-  grid-column: 8 / span 5;
-  margin: 0 auto;
-
+  grid-column: 9/13;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   &-title {
     display: flex;
     justify-content: space-between;
@@ -495,7 +572,7 @@ footer {
   }
 
   .feature {
-    margin-top: 24px;
+    margin-top: 25px;
     position: relative;
 
     img {
@@ -549,7 +626,6 @@ footer {
   }
 
   .wrap {
-    margin-top: 19px;
     display: flex;
     gap: 12px;
     align-items: center;
@@ -589,10 +665,15 @@ footer {
 
 // .gallery :start ////////////////////
 
+.g-sec{
+  padding-top: 0;
+
+}
 .gallery {
   // gap: 30px;
   .swiper {
     grid-column: span 12;
+    display: flex;
   }
 
   &-title {
@@ -629,13 +710,12 @@ footer {
     text-align: start;
     margin-top: 17px;
     position: relative;
-    &:hover img {
-      transform: scale(1.1);
-      transition: all 0.25s ease-in;
-    }
+    height: 270px;
+    object-fit: cover;
 
     img {
       width: 100%;
+      height: 100%;
       border-radius: 4px;
     }
 
@@ -688,7 +768,9 @@ footer {
 // gallery end --------------------------------
 
 // blog section start
-
+.blog-container {
+  gap: 30px;
+}
 .blog-catagories {
   display: flex;
   gap: 12px;
@@ -723,7 +805,6 @@ footer {
 
       img {
         border-radius: 4px;
-        margin-right: 10px;
       }
     }
 
@@ -816,11 +897,13 @@ footer {
 // overview catagories
 .overview {
   align-items: flex-start;
-  // gap: 60px;
+  gap: 60px;
 
   .ov-links {
-    grid-column: 1/8;
-    overflow-y: hidden;
+    grid-column: 1/9;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
   }
 
   &-catagory {
@@ -851,11 +934,6 @@ footer {
     justify-self: end;
     gap: 16px;
     text-align: start;
-
-    &:not(:nth-child(1)) {
-      margin-top: 18px;
-    }
-
     a {
       font-size: $big;
       font-weight: 500;
@@ -895,7 +973,7 @@ footer {
   .btn {
     position: relative;
     color: $red;
-    border: .5px solid $red;
+    border: 0.5px solid $red;
     border-radius: 16px;
     padding: 20px 56px;
     font-size: $font-600;
@@ -903,8 +981,8 @@ footer {
     letter-spacing: 0.02rem;
     line-height: 1.5rem;
     background-color: $white;
-    margin-top: 126px;
-    // overflow: hidden;
+    margin: 120px 0 28px 0;
+    align-self: flex-start;
 
     &::after {
       content: "";
@@ -927,7 +1005,7 @@ footer {
     &::before {
       content: "";
       height: 100%;
-    border: .5px solid #72c1f5;
+      border: 0.5px solid #72c1f5;
 
       width: 100%;
       background-color: #72c1f5;
@@ -948,11 +1026,11 @@ footer {
     &:hover::after {
       color: #fff;
       transform: rotateX(0deg);
-      transition-delay: .2s;
+      transition-delay: 0.2s;
     }
     &:hover::before {
       transform: rotateX(0deg);
-      transition-delay: .6s;
+      transition-delay: 0.6s;
     }
     &:hover span {
       color: #fff;
@@ -1022,6 +1100,7 @@ footer {
 
     .card {
       position: relative;
+      margin-top: 22px;
 
       .text {
         width: 100%;
@@ -1033,7 +1112,7 @@ footer {
     }
 
     .ov-card {
-      // align-items: center;
+      margin-top: 20px;
       a {
         color: $black;
         font-size: $font-400;
@@ -1050,7 +1129,11 @@ footer {
     }
 
     .tech-title h4 {
-      margin: 30px 10px 20px 0;
+      margin: 53px 0 47px 0;
+      font-size: $big;
+      font-family: "roboto slab";
+      font-weight: 600;
+      color: rgba(14, 19, 43, 1);
 
       .line {
         height: 1px;
@@ -1075,10 +1158,12 @@ footer {
   .tech .popular-catagory {
     display: flex;
     flex-direction: column;
-    gap: 24px;
-
+    .list {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+    }
     .table {
-      padding-right: 10%;
       display: flex;
       justify-content: space-between;
       font-size: $font-500;
@@ -1087,7 +1172,7 @@ footer {
       color: rgba(14, 19, 43, 1);
     }
     .line {
-      width: 40%;
+      width: 29%;
     }
   }
 
@@ -1098,15 +1183,13 @@ footer {
     }
 
     &-post {
+      display: flex;
+      flex-direction: column;
+      gap: 35px;
       &-card {
-        &:not(:nth-child(1)) {
-          margin-top: 35px;
-        }
-
         display: flex;
         align-items: center;
         gap: 12px;
-
         .text {
           h4 a {
             color: $black;
@@ -1181,6 +1264,7 @@ footer {
     position: absolute;
     top: 5%;
     right: 5%;
+    z-index: 120;
     cursor: pointer;
   }
 
@@ -1201,7 +1285,6 @@ footer {
 
 @keyframes showkey {
   from {
-
     transform: translateY(100%);
   }
   to {
@@ -1319,8 +1402,8 @@ footer {
 @media screen and (max-width: 1068px) {
   .header .navbar-menu {
     position: fixed;
-    top: 10%;
-    right: 20%;
+    top: 61px;
+    right: 90px;
     z-index: 100;
     display: block;
     transition: all 1s ease-in-out;
@@ -1330,9 +1413,15 @@ footer {
     background-color: $white;
     position: fixed;
     left: 0;
+    padding-left: 90px;
     top: 0;
+    text-align: start;
     z-index: 100;
     width: 100%;
+    padding-bottom: 10px;
+    h1 {
+      text-align: start;
+    }
   }
 
   html {
@@ -1359,23 +1448,24 @@ footer {
     top: 10px;
     z-index: 100;
     transform: translateY(-100%);
-    transition:all .4s linear;
+    transition: all 0.4s linear;
     opacity: 0;
   }
   .header .navbar-social {
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 10vh;
-    left: 50%;
-    right: 50%;
+    top: 24px;
+    left: 69px;
     .fa {
       color: #fff;
       font-size: 20px;
     }
   }
   .active.navbar-menu {
-    left: 10%;
+    // right: 30px;
+    top: 47px;
+    left: 30px;
 
     transition: transform 0.3s ease-in;
 
@@ -1409,10 +1499,12 @@ footer {
   }
 
   .header {
-   
-
     .navbar-search {
-      display: none;
+      // display: none;
+      position: fixed;
+      top: 20px;
+      right:69px;
+      
     }
   }
 
@@ -1422,8 +1514,8 @@ footer {
     top: 30%;
     transform: translate(-50% -50%);
     font-size: 1.5rem;
-    text-align: start;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
     padding: 0;
 
@@ -1435,6 +1527,9 @@ footer {
         border-bottom: 1px solid $white;
       }
     }
+  }
+  .overview .ov-card:not(:nth-child(1)) {
+    margin-top: 47px;
   }
 
   // .navbar end ------------------------------------------
@@ -1450,8 +1545,19 @@ footer {
     }
   }
 
-  .hero-content {
-    display: block;
+  .hero {
+    padding: 30px 0;
+    .hero-content {
+      display: flex;
+      gap: 15px;
+      flex-direction: column;
+      padding-top: 74px;
+      img {
+        aspect-ratio: 1/1;
+        object-position: center;
+        object-fit: cover;
+      }
+    }
   }
 
   .wrapper .hot-topic {
@@ -1463,6 +1569,7 @@ footer {
         align-items: flex-start;
         .hot-topic-feature {
           grid-column: span 6;
+          height: 100%;
         }
         .news {
           grid-column: span 6;
@@ -1492,7 +1599,7 @@ footer {
     height: auto;
     background-size: cover;
     border-radius: 5px;
-    padding: 9px ;
+    padding: 9px;
     background-position: right;
   }
 
@@ -1502,6 +1609,14 @@ footer {
   .overview .tech {
     grid-column: span 12;
   }
+  .overview .btn {
+    display: table;
+    margin: 30px 0;
+    text-align: start;
+  }
+  .overview .tech .card img {
+    width: 100%;
+  }
 }
 
 // for mobile device
@@ -1509,31 +1624,67 @@ footer {
   html {
     font-size: 13px;
   }
+  section {
+    padding: 15px 0;
+  }
+  .grid {
+    gap: 0;
+  }
+  .header .logo {
+    text-align: start;
+    padding-left: 90px;
+    h1 {
+      text-align: start;
+    }
+  }
   .hero {
     display: block;
-    img{
+    img {
       width: 100%;
     }
   }
   .wrapper {
-    .hot-topic .swiper {
-      grid-column: span 12;
-      &-slide {
-        grid-column: span 12;
-        .hot-topic-feature {
-          grid-column: span 12;
+    .hot-topic {
+      .news-links {
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-start;
+        img {
+          width: 100%;
         }
-        .news {
+      }
+
+      .swiper {
+        grid-column: span 12;
+        &-slide {
           grid-column: span 12;
-          img {
-            width: 200px;
-            object-fit: cover;
+          .fashion {
+            .feature {
+              grid-column: span 12;
+            }
+            .right {
+              grid-column: span 12;
+              gap: 20px;
+            }
+          }
+          .hot-topic-feature {
+            grid-column: span 12;
+          }
+          .news {
+            grid-column: span 12;
+
+            img {
+              width: 100%;
+              object-fit: cover;
+              aspect-ratio: 16/9;
+            }
           }
         }
       }
     }
     .fashion {
       grid-column: 1 / span 12;
+      margin-top: 30px;
       width: 100%;
       &-title {
         grid-column: span 12;
@@ -1561,7 +1712,7 @@ footer {
   .gallery .card4 {
     grid-column: span 12;
     // aspect-ratio: 16/9;
-    img{
+    img {
       aspect-ratio: 16/12;
       object-fit: cover;
     }
@@ -1581,30 +1732,72 @@ footer {
   .wrapper .hot-topic-title {
     grid-column: span 12;
   }
+  .overview .ov-links {
+    gap: 0;
+  }
 }
 
-@media (max-width: 500px) {
-  html{
+@media (max-width: 600px) {
+  html {
     font-size: 12px;
+  }
+  .header .logo {
+    padding-left: 30px;
+  }
+  .header .navbar-menu {
+    right: 30px;
+  }
+  .wrapper .hot-topic-title {
+    grid-column: span 12;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    h3 {
+      grid-column: span 12;
+      text-align: center;
+    }
+    p {
+      display: flex;
+      justify-content: space-between;
+      grid-column: 1 / span 12;
+      gap: 0;
+    }
   }
   .footer-nav {
     margin-top: 30px;
     flex-direction: column;
     gap: 10px;
   }
-  .container{
+  .container {
     padding: 0 30px;
   }
-.advertisement{
-  background-position: left;
-}
+  .advertisement {
+    background-position: left;
+  }
   .copyright {
     flex-direction: column;
     gap: 10px;
     justify-content: center;
     align-items: center;
   }
-
+  .blog-lifestyle {
+    margin: 20px 0;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 12px;
+  }
+  .blog {
+    &-catagories {
+      grid-column: span 12;
+    }
+  }
+  .news-links {
+    grid-column: span 6;
+    flex-direction: column;
+    align-items: flex-start;
+    img {
+      width: 100%;
+    }
+  }
   .overview {
     .ov-card {
       flex-direction: column;
@@ -1622,17 +1815,19 @@ footer {
       margin-top: 20px;
     }
   }
+  .gallery-title .line {
+    display: none;
+  }
 
   .wrapper .hot-topic-title .line {
     display: none;
   }
-  
-.gallery-card{
 
-  img{
-    aspect-ratio: 16/9;
-    object-fit: cover;
-  }
+  .gallery-card {
+    img {
+      aspect-ratio: 16/9;
+      object-fit: cover;
+    }
   }
 }
 
@@ -1641,7 +1836,7 @@ footer {
   visibility: visible;
   opacity: 1;
   transform: translateY(0);
-  animation: anime .2s   linear  1 ;
+  animation: anime 0.2s linear 1;
   overflow: hidden;
 }
 @keyframes anime {
@@ -1658,28 +1853,22 @@ footer {
 
 // social media style animation
 .navbar-social {
-  
   span {
     display: none;
     font-size: 16px;
     margin-left: 6px;
     font-weight: 500;
-  
-    transform: translateX(-100%);
-    animation: tran .5s 1;
 
+    transform: translateX(-100%);
+    animation: tran 0.5s 1;
   }
   @keyframes tran {
-    from{
-    transform: scale(1.5);
-
+    from {
+      transform: scale(1.5);
     }
-    to{
-    transform: scale(1);
-      
-
+    to {
+      transform: scale(1);
     }
-    
   }
   .facebook:hover .fa {
     color: #1877f2;
@@ -1689,7 +1878,7 @@ footer {
     opacity: 1;
     visibility: visible;
     transform: translateX(0%);
-    transition: transform 3s  linear;
+    transition: transform 3s linear;
     color: #1877f2;
   }
   .facebook:hover {
@@ -1697,8 +1886,7 @@ footer {
     padding: 3px 10px;
     border-radius: 10px;
     background-color: $white;
-    transition: transform 3s  linear;
-
+    transition: transform 3s linear;
   }
   // INSATGRAM
   .instagram:hover .fa {
